recursively find all descendants of a contract
Signed-off-by: Xin Li <xin.li@swirldslabs.com>